<resources>
    <string name="app_name">Hushed</string>
    <string name="app_version">Pre-Alpha</string>
    <string name="action_nickname">Nickname</string>
    <string name="course_name">CS4360 Senior Experience Course</string>
    <string name="button_connect">Connect</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_dummysend">Dummy Send</string>
    <string name="button_dummyretrieve">Dummy Retrieve</string>
    <string name="button_send">Send</string>
    <string name="button_enter">Enter</string>
    <string name="button_newContact">+</string>
    <string name="prompt_enterContact">Enter Contact</string>
    <string name="prompt_enterMesssage">Enter Message</string>
    <string name="prompt_enterNickname">Enter Nickname</string>
    <string name="display_myOwnNickname">My Nickname</string>
    <string name="display_nickname_message">Your Nickname is: %s</string>
    <string name="display_default_nickname">Your Nickname will display here</string>
</resources>
